# grove-lcd-rgb

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
examples/: esp32c6_basic.rs  esp32c6_color_test.rs  esp32c6_counter.rs  esp32c6_diagnostic.rs  esp32c6_i2c_scan.rs
src/: lib.rs
