[package]
name = "grove-lcd-rgb"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Pugh"]
license = "MIT OR Apache-2.0"
description = "Platform-agnostic driver for Grove LCD RGB Backlight using embedded-hal, with full support for v4 and v5 hardware"
repository = "https://github.com/maththedude/grove-lcd-rgb"
readme = "README.md"
keywords = ["embedded", "lcd", "grove", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
#TODO documentation = "https://docs.rs/grove-lcd-rgb"

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
# For examples only - not required by library users
# Match versions exactly with working thermostat
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c6", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "esp-alloc", "esp32c6"] }
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = ["defmt", "esp32c6", "panic-handler"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }

[features]
default = []

# Examples
[[example]]
name = "esp32c6_basic"

[[example]]
name = "esp32c6_counter"

[[example]]
name = "esp32c6_i2c_scan"

[[example]]
name = "esp32c6_color_test"

[[example]]
name = "esp32c6_diagnostic"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
overflow-checks = false